--- a/style.css
+++ b/style.css
@@ -6,11 +6,19 @@
     background-color: #F7F7F8;
 }
 .info-box {
-    min-height: 320px; 
+    min-height: 290px; 
 }
 .section {
     border-bottom: 1px solid #d3c1b6;
     padding: 15px 0;
+    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.section1 {
+   
+    padding: 10px 0;
     cursor: pointer;
     display: flex;
     justify-content: space-between;
@@ -24,7 +32,7 @@
     display: none;
     font-size: 1rem;
     color: #6c5845;
-    padding-top: 10px;
+    padding-top: 0px;
 }
 .toggle-icon {
     font-size: 1.5rem;
@@ -33,3 +41,8 @@
 .text{
     font-family: 'Playfair Display', serif;
 }
+.text2 {
+    font-family: 'Playfair Display', 'Merriweather', Georgia, serif;
+   
+    font-weight: normal;
+  }
